force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <label>Previous Employer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>