force-app/main/default/objects/Employment_History__c/fields/Admin1__c.field-meta.xml
<CustomField>
    <fullName>Admin1__c</fullName>
    <formula>TEXT(Hourly_Wage__c) &amp; &quot; | &quot; &amp;
TEXT(Hours_Per_Week__c)  &amp; &quot; | &quot; &amp;
TEXT(Yearly_Income__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin1</label>
    <type>Text</type>
</CustomField>