force-app/main/default/objects/Employment_History__c/fields/Annual_or_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Annual_or_Hourly__c</fullName>
    <label>Annual or Hourly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>