force-app/main/default/objects/Employment_History__c/fields/Employment_Belongs_to_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Employment_Belongs_to_Contact_Owner__c</fullName>
    <formula>Contact__r.Contact_owner_ID__c =  CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Belongs to Contact Owner</label>
    <type>Checkbox</type>
</CustomField>