force-app/main/default/objects/Employment_History__c/fields/Employment_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Ownership_Status__c</fullName>
    <formula>IF( 
  Employment_Belongs_to_Contact_Owner__c,
  &quot;Self&quot;,
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Ownership Status</label>
    <type>Text</type>
</CustomField>