force-app/main/default/objects/Employment_History__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>IF(ISBLANK(Address_1__c), &quot;&quot;, Address_1__c &amp; &quot; | &quot; ) &amp;
IF(ISBLANK(Address_2__c), &quot;&quot;, Address_2__c &amp; &quot; | &quot; ) &amp;
IF(ISBLANK(City__c), &quot;&quot;, City__c &amp; &quot; | &quot; ) &amp;
IF(ISBLANK(TEXT(State__c)), &quot;&quot;, TEXT(State__c) &amp; &quot; | &quot; ) &amp;
IF(ISBLANK(Zip__c), &quot;&quot;, Zip__c &amp; &quot; | &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>