force-app/main/default/objects/Employment_History__c/fields/Hourly_Wage__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Wage__c</fullName>
    <label>Hourly Wage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>