force-app/main/default/objects/Employment_History__c/fields/Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Week__c</fullName>
    <label>Hours Per Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>