force-app/main/default/objects/Employment_History__c/fields/Housing_Member__c.field-meta.xml
<CustomField>
    <fullName>Housing_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housing Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Housing_Member__c.Contact__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Housing_Member__c</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <type>Lookup</type>
</CustomField>