force-app/main/default/objects/Employment_History__c/fields/Linked_Person__c.field-meta.xml
<CustomField>
    <fullName>Linked_Person__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Housing_Member__c)), 
    &quot;Housing Member&quot;,
    &quot;Contact&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Person</label>
    <type>Text</type>
</CustomField>