force-app/main/default/objects/Employment_History__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <formula>CASE( TEXT(Annual_or_Hourly__c),
  &quot;Annual&quot;, ROUND(Yearly_Income__c / 12,0),
  &quot;Hourly&quot;, ROUND(Hourly_Wage__c * Hours_Per_Week__c * 4.35, 0),
  Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>