force-app/main/default/objects/Employment_History__c/fields/Verifier_Email__c.field-meta.xml
<CustomField>
    <fullName>Verifier_Email__c</fullName>
    <label>Verifier Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>