force-app/main/default/objects/Employment_History__c/fields/Yearly_Income__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Income__c</fullName>
    <label>Yearly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>