force-app/main/default/objects/Employment_History__c/validationRules/Must_have_hourly_and_weekly.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_hourly_and_weekly</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
  AND(
    ISBLANK( Hourly_Wage__c), 
    NOT(ISBLANK( Hours_Per_Week__c ))
  ),
TRUE,

IF(
  AND(
    ISBLANK( Hours_Per_Week__c), 
    NOT(ISBLANK( Hourly_Wage__c ))
  ),
TRUE,

FALSE
))</errorConditionFormula>
    <errorMessage>You must include hourly wage and hours per week together</errorMessage>
</ValidationRule>