force-app/main/default/objects/Employment_History__c/validationRules/Must_Have_Hourly_Hours_Week_Or_Yearly.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Hourly_Hours_Week_Or_Yearly</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
  AND(
    ISBLANK(Hourly_Wage__c),
    ISBLANK(Hours_Per_Week__c),
    ISBLANK(Yearly_Income__c)
  ),TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>You must include wage info either hourly or yearly</errorMessage>
</ValidationRule>